--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,29 @@
-
+remote_theme: PfeifferChPT/pc-cdn-template
+name: "Bautagebuch der Fam. Pfeiffer"
+title: "Bautagebuch der Fam. Pfeiffer"
+subtitle: "Hausbau-(B)log der Familie S&amp;C Pfeiffer"
+description: "" #metadescription
+markdown: kramdown
+highlighter: rouge # pygments or rouge or null
+exclude: ["node_modules", "gulpfile.js", "package.json"]
+permalink: /:year/:month/:day/:title/index.html
+excerpt_separator: <!--more-->
+templateserverurl: https://template.pc-cdn.de
+themecolor: green
+dummyimage: overlay-pattern.png
+themeURI: none
+themeBGimage: https://hausbau-blog.pfeiffer.world/assets/bg-images/haus.jpg
+GallerieDir: https://media.hausbau-blog.pfeiffer.world/assets/bildergalerien/
+hbbhomeurl: https://hausbau-blog.pfeiffer.world/
+livereload: true
+author: Christian Pfeiffer
+since: 2022
+# Pagination Settings 
+#pagination:
+#  enabled: true
+#  per_page: 2
+#  permalink: '/page/:num/'
+#  title: ' - page :num'
+#  limit: 0
+#  sort_field: 'date'
+#  sort_reverse: true
