--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 remote_theme: PfeifferChPT/pc-cdn-template
-name: "Bautagebuch der Fam. Pfeiffer"
-title: "Bautagebuch der Fam. Pfeiffer"
-subtitle: "Hausbau-(B)log der Familie S&amp;C Pfeiffer"
+name: "Javascript Cookie Test"
+title: "Javascript Cookie Test"
+subtitle: "Kekse mit JS auslesen - Testseite"
 description: "" #metadescription
 markdown: kramdown
 highlighter: rouge # pygments or rouge or null
